[FIX] web: scrollbar in expense list view
expense listview adds buttons before listview renderer element
due to which unnecessary vertical scrollbar displayed, it is
because of commit: https://github.com/odoo/odoo/commit/7c8e627ff5029cb539d702705e5ce53d658c76ed

Removed 100% height to listview renderer element, without 100% height
listview displayed properly, don't find any issue without 100% height,
so removed it which will fix this unnecessary scrollbar issue as well.

Also set o_view_nocontent top to 25% instead of 30% to avoid vertical scroller.

task-2334044

--- a/addons/hr_expense/static/src/scss/hr_expense.scss
+++ b/addons/hr_expense/static/src/scss/hr_expense.scss
@@ -1,4 +1,7 @@
 .o_content {
+    .o_expense_container + .o_list_view .o_view_nocontent {
+        top: 10%;
+    }
     .o_expense_card {
         border-bottom: 1px solid darken($o-control-panel-background-color, 20%);
         border-right: 1px solid darken($o-control-panel-background-color, 20%);
@@ -25,9 +28,9 @@
     .o_nocontent_help {
         .o_view_nocontent_expense_receipt:before {
             @extend %o-nocontent-init-image;
-            @include size(300px, 230px);
+            @include size(250px, 190px);
             background: transparent url(/hr_expense/static/img/nocontent.png) no-repeat center;
-            background-size: 300px 230px;
+            background-size: 250px 190px;
             margin-bottom: 1rem;
         }
     }
