--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -1,6 +1,5 @@
 .o_list_view {
     position: relative;
-    height: 100%;
 
     .o_list_table {
         position: relative;
